--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -1,1 +1,7 @@
 <h1> <%= @artist.name %> </h1>
+
+<ul>
+<% @artist.songs.each do |s|
+   <li> <%= link_to s.name, song_poth(s) %> </li>
+  <%end%>
+</ul>
