automatically backed up by learn

--- a/app/views/artists/show.html.erb
+++ b/app/views/artists/show.html.erb
@@ -2,6 +2,6 @@
 
 <ul>
 <% @artist.songs.each do |s|
-   <li> <%= link_to s.name, song_poth(s) %> </li>
+   <li> <%= link_to s.name, song_path(s) %> </li>
   <%end%>
 </ul>
